crates/sith_python_parser/src/snapshots/sith_python_parser__string__tests__parse_u_string_concat_1.snap
---
source: crates/sith_python_parser/src/string.rs
expression: suite
---
[
    Expr(
        ExprStmt {
            range: 0..17,
            value: StringLiteral(
                StringLiteralExpr {
                    range: 0..17,
                    value: StringLiteralValue {
                        inner: Concatenated(
                            ConcatenatedStringLiteral {
                                strings: [
                                    StringLiteral {
                                        range: 0..8,
                                        value: "Hello ",
                                        flags: StringLiteralFlags {
                                            prefix: Empty,
                                            triple_quoted: false,
                                        },
                                    },
                                    StringLiteral {
                                        range: 9..17,
                                        value: "world",
                                        flags: StringLiteralFlags {
                                            prefix: Unicode,
                                            triple_quoted: false,
                                        },
                                    },
                                ],
                                value: "Hello world",
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
