crates/sith_python_parser/src/snapshots/sith_python_parser__string__tests__raw_byte_literal_1.snap
---
source: crates/sith_python_parser/src/string.rs
expression: suite
---
[
    Expr(
        ExprStmt {
            range: 0..8,
            value: BytesLiteral(
                BytesLiteralExpr {
                    range: 0..8,
                    value: BytesLiteralValue {
                        inner: Single(
                            BytesLiteral {
                                range: 0..8,
                                value: [
                                    92,
                                    120,
                                    49,
                                    122,
                                ],
                                flags: BytesLiteralFlags {
                                    prefix: Raw {
                                        uppercase_r: false,
                                    },
                                    triple_quoted: false,
                                },
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
