crates/sith_python_parser/src/snapshots/sith_python_parser__string__tests__string_parser_escaped_windows_eol.snap
---
source: crates/sith_python_parser/src/string.rs
expression: suite
---
[
    Expr(
        ExprStmt {
            range: 0..19,
            value: StringLiteral(
                StringLiteralExpr {
                    range: 0..19,
                    value: StringLiteralValue {
                        inner: Single(
                            StringLiteral {
                                range: 0..19,
                                value: "text more text",
                                flags: StringLiteralFlags {
                                    prefix: Empty,
                                    triple_quoted: false,
                                },
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
